@@ -10,6 +10,12 @@ MISC
 * the "hist" argument for `poppr()` is now deprecated in favor of "plot"
 * minor documentation improvements
 
+BUG FIX
+------------
+
+* When supplied an object with no strata, `clonecorrect()` will default to
+  `strata = NA`.
+
 poppr 2.1.0
 ===========
 
